feat(ramda) : test basic ramda

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>RamdaJs</title>
+  <script src="https://cdn.jsdelivr.net/ramda/0.23.0/ramda.min.js"></script>
 </head>
 
 <body>
   <h1>RamdaJs Please Open Inspect</h1>
   <script src="curry.js"></script>
-  <script src="app.js"></script>
+  <!-- <script src="app.js"></script> -->
+  <script src="mock-fetch.js"></script>
+  <script src="fp-ramda.js"></script>
 </body>
 
 </html>
