feat(ramda-compose) : uer ramda R.compose()()

--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
   <script src="curry.js"></script>
   <!-- <script src="app.js"></script> -->
   <script src="mock-fetch.js"></script>
-  <script src="fp-ramda.js"></script>
+  <script src="ramda-basic.js"></script>
+  <script src="ramda-compose.js"></script>
 </body>
 
 </html>
