feat(ramda-compose) : uer ramda R.converge()

--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
   <script src="mock-fetch.js"></script>
   <script src="ramda-basic.js"></script>
   <script src="ramda-compose.js"></script>
+  <script src="ramda-nested-field.js"></script>
+  <script src="ramda-converge.js"></script>
 </body>
 
 </html>
