feat(ramda-filter and condition) :

--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
   <script src="ramda-compose.js"></script>
   <script src="ramda-nested-field.js"></script>
   <script src="ramda-converge.js"></script>
+  <script src="ramda-filter-array.js"></script>
+  <script src="ramda-condition.js"></script>
 </body>
 
 </html>
