feat(ramda R.when(), R.unless()) :

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <script src="ramda-converge.js"></script>
   <script src="ramda-filter-array.js"></script>
   <script src="ramda-condition.js"></script>
+  <script src="ramda-when-unless.js"></script>
 </body>
 
 </html>
