--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <script src="ramda-filter-array.js"></script>
   <script src="ramda-condition.js"></script>
   <script src="ramda-when-unless.js"></script>
+  <script src="ramda-change-objfield.js"></script>
 </body>
 
 </html>
