--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
   <script src="ramda-condition.js"></script>
   <script src="ramda-when-unless.js"></script>
   <script src="ramda-change-objfield.js"></script>
+  <script src="ramda-useWith.js"></script>
 </body>
 
 </html>
